--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:5000/api/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.7",
@@ -11,14 +10,17 @@
         "quill": "^1.3.7",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-hook-form": "^7.8.3",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "redux": "^4.1.0",
         "socket.io-client": "^4.1.2",
+        "styled-components": "^5.3.0",
         "uuid": "^8.3.2",
         "web-vitals": "^1.1.2"
     },
+    "proxy":"http://localhost:5000",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
