--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.21.1",
+        "jwt-decode": "^3.1.2",
         "quill": "^1.3.7",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -15,12 +16,14 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "redux": "^4.1.0",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-thunk": "^2.3.0",
         "socket.io-client": "^4.1.2",
         "styled-components": "^5.3.0",
         "uuid": "^8.3.2",
         "web-vitals": "^1.1.2"
     },
-    "proxy":"http://localhost:5000",
+    "proxy": "http://localhost:5000",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
